# forecast-playground

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  pyproject.toml
adapters/: mcp_server.py  verifiers_env.py
examples/: custom_source_template.py  leak_ab_study.py  wikipedia_as_of.py
proposals/: 0001-llm-judge-scorer.md  0002-forecastbench-question-source.md  0003-parametric-leakage-guard.md
src/chrono_harness/: __init__.py  cache.py  http.py
src/chrono_harness/sources/: polymarket.py  wikipedia.py
src/chrono_harness/tools/: sandbox.py
src/forecast_playground/: __init__.py  agent.py  cache.py  calibration.py  clock.py  drivers.py  env.py  http.py  judge.py  leakage.py  retrieval.py  scaffold.py  schema.py  scoring.py  toolkit.py
src/forecast_playground/sources/: __init__.py  base.py  current_events.py  forecastbench.py  fred.py  gdelt.py  noaa.py  pageviews.py  wayback.py
src/forecast_playground/tools/: __init__.py
tests/: conftest.py  test_agent_loop.py  test_aggregation_and_calibration.py  test_cache.py  test_clock.py  test_drivers.py  test_forecastbench.py  test_fred.py  test_integration.py  test_judge.py  test_judge_quality.py  test_leak_safety.py  test_leakage.py  test_mcp_server.py  test_news_sources.py  test_noaa.py  test_retrieval.py  test_schema.py  test_selection.py  test_toolkit_and_scoring.py  test_wayback.py  test_wikipedia.py
