[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forecast-playground"
version = "0.1.0"
description = "A time-masked retrieval harness for AI forecasting"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["forecasting", "reinforcement-learning", "retrieval", "llm", "time-masking"]
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
# Model drivers: OpenAI SDK reaches any OpenAI-compatible endpoint (OpenAI, vLLM,
# Ollama, Together, ...); anthropic[bedrock] is the native Anthropic/Bedrock path.
openai = ["openai>=1.40"]
anthropic = ["anthropic[bedrock]>=0.40"]  # bedrock extra pulls boto3/botocore
verifiers = ["verifiers>=0.1.14", "datasets"]
mcp = ["fastmcp"]
bigquery = ["google-cloud-bigquery>=3"]  # optional GDELT news backend (needs a GCP project)
dev = ["pytest>=8", "pytest-mock", "ruff", "python-dotenv"]

[tool.hatch.build.targets.wheel]
packages = ["src/forecast_playground"]

[tool.pytest.ini_options]
markers = [
    "integration: hits live network/APIs (and maybe a model); skipped by default",
]

[tool.ruff]
line-length = 90
target-version = "py310"
